--- a/style.css
+++ b/style.css
@@ -5,6 +5,20 @@ body {
   background-color: #232121;
 }
 
+@font-face {
+  font-family: "Gabarito";
+  src: url("./Fonts/Gabarito-SemiBold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Gabarito1";
+  src: url("./Fonts/Gabarito-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .card {
   background-color: #ffffff;
   border-radius: 25px;
@@ -64,15 +78,17 @@ body {
   margin: 0;
   font-size: 31px;
   color: #333;
+  font-family: Gabarito;
 }
 
 .profesion {
   margin: 0;
   font-size: 16px;
   color: #777;
+  font-family: Gabarito;
 }
 
-.edad{
+.edad {
   font-size: 18px;
 }
 
@@ -93,6 +109,7 @@ body {
   margin: 5px 0;
   font-size: 14px;
   color: #555;
+  font-family: Gabarito1;
 }
 
 .redes-sociales {
@@ -117,46 +134,52 @@ body {
 .descripcion {
   position: relative;
   top: 15px;
-  text-align: center; 
+  text-align: center;
   font-size: 15px;
   margin-top: -140px;
-  padding: 0 12px; 
+  padding: 0 12px;
   color: #1f1f1f;
+  font-family: Gabarito1;
 }
 
 @media (max-width: 600px) {
   .card {
-    width: 90%; /* Adjust this value to your preference */
+    width: 90%;
   }
+
   .nombre {
     margin: 0;
     font-size: 22px;
     color: #333;
+    font-family: Gabarito;
+
   }
-  
+
   .profesion {
     margin: 0;
     font-size: 14px;
     color: #777;
+    font-family: Gabarito;
+
   }
 
   .perfil {
     position: relative;
-    left: -105px;
+    left: -112px;
     top: -80px;
-    width: 110;
-    height: 110px;
+    width: 100;
+    height: 100px;
     border-radius: 100%;
     border: white solid 6px;
   }
-  
+
   .descripcion {
     position: relative;
     top: 15px;
-    text-align: center; 
+    text-align: center;
     font-size: 13px;
     margin-top: -140px;
-    padding: 0 30px; 
+    padding: 0 30px;
     color: #1f1f1f;
   }
 }
